--- a/jc3248w535.yaml
+++ b/jc3248w535.yaml
@@ -29,6 +29,10 @@ psram:
   mode: octal
   speed: 80MHz #cant go faster than 80 will revert to 40
 
+# Enable logging
+logger:
+  hardware_uart: USB_SERIAL_JTAG
+
 #-------------------------------------------
 # Internal outputs
 #-------------------------------------------
