--- a/jc3248w535.yaml
+++ b/jc3248w535.yaml
@@ -100,3 +100,7 @@ display:
     auto_clear_enabled: false
     #show_test_card: true # must enable update_interval, auto_clear_enable
 
+lvgl:
+  #full_refresh: true # not needed any longer
+  draw_rounding: 8 # necessary for the axs15231 display controller
+
