--- a/jc3248w535.yaml
+++ b/jc3248w535.yaml
@@ -64,18 +64,18 @@ touchscreen:
     id: my_touchscreen
     display: my_display
     i2c_id: touchscreen_bus
-    transform:
-      mirror_x: false
-      mirror_y: false
-      swap_xy: true # true for rotation 90 or 270
-    #on_touch:
-    #  - lambda: |-
-    #      ESP_LOGI("cal", "x=%d, y=%d, x_raw=%d, y_raw=%0d",
-    #        touch.x,
-    #        touch.y,
-    #        touch.x_raw,
-    #        touch.y_raw
-    #      );
+    #transform:
+    #  mirror_x: false
+    #  mirror_y: false
+    #  swap_xy: true # true for rotation 90 or 270
+    on_touch:
+      - lambda: |-
+          ESP_LOGI("cal", "x=%d, y=%d, x_raw=%d, y_raw=%0d",
+            touch.x,
+            touch.y,
+            touch.x_raw,
+            touch.y_raw
+          );
 
 #-------------------------------------------
 # Display axs15231 QSPI
