--- a/jc3248w535.yaml
+++ b/jc3248w535.yaml
@@ -67,7 +67,7 @@ touchscreen:
     #transform:
     #  mirror_x: false
     #  mirror_y: false
-    #  swap_xy: true # true for rotation 90 or 270
+    swap_xy: true # true for rotation 90 or 270
     on_touch:
       - lambda: |-
           ESP_LOGI("cal", "x=%d, y=%d, x_raw=%d, y_raw=%0d",
@@ -102,6 +102,7 @@ display:
     # The display can be rotated 180 or mirrored using mirror_x and mirror_y, but swap_xy does not work.
     # Software rotation using rotation: 90 works (also for 270) but requires full screen redraws so is slow. The display itself is quite fast so it’s still usable though.
     # 90 & 270 need swap_xy to be true in the touchscreen section
+    swap_xy: True
     rotation: 90 # 90 for landscape, 0 for portrait
     draw_from_origin: true
     update_interval: never
