--- a/jc3248w535.yaml
+++ b/jc3248w535.yaml
@@ -64,10 +64,10 @@ touchscreen:
     id: my_touchscreen
     display: my_display
     i2c_id: touchscreen_bus
-    #transform:
+    transform:
     #  mirror_x: false
     #  mirror_y: false
-    swap_xy: true # true for rotation 90 or 270
+      swap_xy: true # true for rotation 90 or 270
     on_touch:
       - lambda: |-
           ESP_LOGI("cal", "x=%d, y=%d, x_raw=%d, y_raw=%0d",
