--- a/jc3248w535.yaml
+++ b/jc3248w535.yaml
@@ -89,7 +89,7 @@ spi:
   
 display:
   - platform: qspi_dbi
-    model: axs15231
+    model: JC4832W535
     data_rate: 40MHz
     id: my_display
     spi_id: display_qspi
@@ -103,7 +103,7 @@ display:
     # Software rotation using rotation: 90 works (also for 270) but requires full screen redraws so is slow. The display itself is quite fast so it’s still usable though.
     # 90 & 270 need swap_xy to be true in the touchscreen section
     rotation: 270 # 90 for landscape, 0 for portrait
-    draw_from_origin: true
+    #draw_from_origin: true
     update_interval: never
     auto_clear_enabled: false
     #show_test_card: true # must enable update_interval, auto_clear_enable
