--- a/jc3248w535.yaml
+++ b/jc3248w535.yaml
@@ -64,7 +64,7 @@ touchscreen:
     id: my_touchscreen
     display: my_display
     i2c_id: touchscreen_bus
-    transform:
+    #transform:
     #  mirror_x: false
       #mirror_y: true
       #swap_xy: true # true for rotation 90 or 270
