--- a/jc3248w535.yaml
+++ b/jc3248w535.yaml
@@ -104,11 +104,11 @@ display:
     # 90 & 270 need swap_xy to be true in the touchscreen section
     rotation: 0 # 90 for landscape, 0 for portrait
     #draw_from_origin: true
-    update_interval: never
+    #update_interval: never
     auto_clear_enabled: false
     #show_test_card: true # must enable update_interval, auto_clear_enable
 
-lvgl:
+#lvgl:
   #full_refresh: true # not needed any longer
-  draw_rounding: 8 # necessary for the axs15231 display controller
+  #draw_rounding: 8 # necessary for the axs15231 display controller
 
