--- a/jc3248w535.yaml
+++ b/jc3248w535.yaml
@@ -67,7 +67,7 @@ touchscreen:
     i2c_id: touchscreen_bus
     transform:
       swap_xy: true
-      mirror_y: true
+      mirror_x: true
     on_touch:
       - lambda: |-
           ESP_LOGI("cal", "x=%d, y=%d, x_raw=%d, y_raw=%0d",
