--- a/jc3248w535.yaml
+++ b/jc3248w535.yaml
@@ -25,6 +25,11 @@ esp32:
 preferences:
   flash_write_interval: 1min      
 
+external_components:
+  - source: github://pr#8553
+    components: [axs15231]
+    refresh: 1h
+
 psram:
   mode: octal
   speed: 80MHz #cant go faster than 80 will revert to 40
@@ -62,12 +67,18 @@ i2c:
 
 touchscreen:
   - platform: axs15231
-    id: my_touchscreen
+    id: my_touch
     display: my_display
     i2c_id: touchscreen_bus
+    calibration:
+      x_min: 0
+      x_max: 480
+      y_min: 0
+      y_max: 320
     transform:
-      #swap_xy: true
-      mirror_x: true
+      swap_xy: true
+      mirror_x: false
+      mirror_y: true
     on_touch:
       - lambda: |-
           ESP_LOGI("cal", "x=%d, y=%d, x_raw=%d, y_raw=%0d",
