--- a/jc3248w535.yaml
+++ b/jc3248w535.yaml
@@ -67,7 +67,7 @@ i2c:
 
 touchscreen:
   - platform: axs15231
-    id: my_touch
+    id: my_touchscreen
     display: my_display
     i2c_id: touchscreen_bus
     calibration:
