--- a/lvgl_theme.yaml
+++ b/lvgl_theme.yaml
@@ -25,7 +25,7 @@ lvgl:
       pad_all: 10px
       shadow_width: 0 # This is required even though the default is supposed to be 0
       bg_color: very_dark_gray
-      text_color: gray
+      text_color: white
       checked:
         bg_color: $button_on_color
-        text_color: gray
+        text_color: white
